--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FireNote</string>
     <string name="open">open</string>
     <string name="close">close</string>
+    <string name="title_activity_note_details">NoteDetails</string>
 </resources>
