--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="open">open</string>
     <string name="close">close</string>
     <string name="title_activity_note_details">NoteDetails</string>
+    <string name="title_activity_add_notes">AddNotes</string>
 </resources>
